--- a/src/app/contact-form/contact-form.component.scss
+++ b/src/app/contact-form/contact-form.component.scss
@@ -15,6 +15,7 @@ h4 {
   margin: -5px 0 15px;
   display: inline-block;
   background-color: rgba(255,255,255,0.8);
-  padding: 7.5px;
+  padding: 7px;
   border-radius: 2.5px;
+  font-size: 12px;
 }
